# src/controllers/product.controller.ts
@@ -1,6 +1,6 @@
 import { Get, Route, Tags,  Post, Body, Path } from "tsoa";
 import {Product} from '../models'
-import {list, create, IProductPaylod, getOne} from '../repositories/product.repository'
+import {list, createProduct, IProductPaylod, getOne, createProductWithDetail} from '../repositories/product.repository'
 
 @Route("product-type")
 @Tags("Product")
@@ -12,11 +12,15 @@ export default class ProductController {
 
   @Post("/")
   public async createData(@Body() body: IProductPaylod): Promise<Product> {
-    return create(body)
+    return createProduct(body)
   }
 
   @Get("/:id")
   public async getOne(@Path() id: string): Promise<Product | null> {
     return getOne(Number(id))
+  }
+  @Post("/detail")
+  public async createWithDetail(@Body() body: IProductPaylod): Promise<Product> {
+    return createProductWithDetail(body)
   }
 }
