# src/models/index.ts
@@ -5,5 +5,9 @@ import {Brand} from './brand'
 import { ProductType } from './product-type';
 import { Product } from './product';
 import { ProductDetail } from './product-detail';
+import { Vendor } from './vendor';
+import { Company } from './company';
+import { PurchaseHeader } from './purchase-header';
+import { PurchaseLineItem } from './purchase-line-item';
 
-export {User, Post, Comment, Brand, ProductType, Product, ProductDetail}
+export {User, Post, Comment, Brand, ProductType, Product, ProductDetail, Vendor, Company, PurchaseHeader, PurchaseLineItem}
